[tool.poetry]
name = "population-dynamics"
version = "0.1.2"
description = ""
authors = ["jorenham <jhammudoglu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.21.4"
scipy = "^1.7.2"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
population_dynamics = 'population_dynamics:main'
